# Ctemplate

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  config.txt
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml  help.yml
include/: cli.hpp  config.hpp  ctemplate.hpp  fmatch.hpp  format.hpp  gitupdate.hpp  global.hpp  helper.hpp  main.hpp  os.hpp  path.hpp  updater.hpp  util.hpp
src/: ctemplate.cpp  global.cpp  helper.cpp  main.cpp  util.cpp
test/: CMakeLists.txt
test/src/: ctemplate_test.cpp  project_template_test.cpp
test/test_path/program/: config.txt
test/test_path/templates/cpp-test/: .gitignore  CMakeLists.txt
test/test_path/templates/cpp-test/.ctemplate/: info.json
test/test_path/templates/cpp-test/src/: main.cpp
test/test_path/templates/py/: .gitignore
test/test_path/templates/py/.ctemplate/: info.json  variables.json
test/test_path/templates/py/.ctemplate/cache/: included_search_paths.json  search_paths.json
test/test_path/templates/py/test/: test_main.py
test/test_path/templates/t1/: test.txt
test/test_path/templates/t1/sub/: tt.txt
test/test_path/test_suites/init_template/test_templates/py/.ctemplate/: variables.json
test/test_path/test_suites/init_template/test_templates/py/.ctemplate/cache/: included_search_paths.json  search_paths.json
test/test_path/test_suites/replace_filenames/!project!/: !project!.py
test/test_path/test_suites/reset_config/templates/py/: info.json  variables.json
test/test_path/testing/init_template/temp/: test.py
